--- a/Frontend/src/styles/profile.css
+++ b/Frontend/src/styles/profile.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     min-height: 80vh;
     padding: 20px;
     background-color: #f8f9fa;
@@ -11,13 +12,14 @@
 
 .profile-sidebar {
     width: 100%;
-    max-width: 300px;
+    max-width: 500px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 50px;
     margin-bottom: 20px;
 }
+
 
 .profile-content {
     width: 100%;
